--- a/app/views/pairs/new.html.haml
+++ b/app/views/pairs/new.html.haml
@@ -1,23 +1,1 @@
-#modal-window.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "exampleModalLabel", :role => "dialog", :tabindex => "-1"}
-  .modal-dialog
-    .modal-content
-      .modal-header
-        %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
-          %span{"aria-hidden" => "true"} ×
-        %h4#exampleModalLabel.modal-title New message
-      .modal-body
-        = simple_form_for(@pair) do |f|
-          = f.error_notification
-
-          .form-inputs
-            = f.input :pair_date, as: :date, class: "form-control"
-            = f.input :pair_time, as: :time
-            = f.input :navigator_id
-            = f.input :address
-            = f.input :address_details
-            = f.input :details
-            = f.input :type
-          .modal-footer
-            .form-actions
-              = f.button :submit, class: "btn btn-primary"
-              %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
+= render 'form'
