--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,9 +4,8 @@
     %title= "#{content_for?(:title) ? yield(:title) : 'Rails Devise'} - GEEKHUB.IO"
     = include_gon
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    %script{:src => "http://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
+    %script{:src => "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"}
     = javascript_include_tag 'application'
-    %script{:src => "/assets/jquery.jscroll.min.js"}
     = csrf_meta_tags
 
   %body
