--- a/app/views/profiles/_edit_form.html.haml
+++ b/app/views/profiles/_edit_form.html.haml
@@ -29,4 +29,11 @@
   .form-actions
     = f.button :submit, class: "btn btn-default btn-lg btn-block"
 
-= render 'autocomplete'
+//= render 'autocomplete'
+:javascript
+  $("#profile_address").geocomplete({
+    details: "form",
+    markerOptions: {
+      draggable: true
+    }
+  });
