--- a/app/assets/stylesheets/bootstrap_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_overrides.scss
@@ -146,3 +146,13 @@ fieldset[disabled] .btn-gray.active {
 * {
   border-radius: 0 !important;
 }
+
+// .checkbox input[type=checkbox]:checked + label:after {
+//     font-family: 'Glyphicons Halflings';
+//     content: "\e013";
+// }
+// .checkbox label:after {
+//     padding-left: 4px;
+//     padding-top: 2px;
+//     font-size: 9px;
+// }
