--- a/app/views/pairs/_form.html.haml
+++ b/app/views/pairs/_form.html.haml
@@ -2,14 +2,14 @@
   = simple_form_for(@pair, remote: true, validate: true, html: { multipart: true }) do |f|
     = f.error_notification
     .form-inputs
-      = f.input :pair_date, as: :string, class:"form-control", placeholder: 'Pair date time', label: false
-      = f.input :pair_time, as: :string, input_html: {"data-mask" => "99:99"}, label: false, placeholder: 'Pair time'
+      = f.input :pair_date, as: :string, class:"form-control", placeholder: 'Pair date time --cant be blank', label: false
+      = f.input :pair_time, as: :string, input_html: {"data-mask" => "99:99"}, label: false, placeholder: 'minimum time for pairing ex. 01:00 --cant be blank'
       = f.input :navigator_id, as: :hidden
-      = f.input :address, label: false, placeholder: 'Pair location'
-      = f.input :address_details, label: "Location details", label: false, placeholder: 'Location details'
-      = f.input :details, label: false, placeholder: 'Reason of pairing', required: true, validate: { presence: true }
+      = f.input :address, label: false, placeholder: 'Pair location ex. madinet nasr, cairo, egypt', hint: ("can't be blank if you want to pair offline.")
+      = f.input :address_details, label: false, placeholder: 'Location details ex. cowork space, coffee shop'
+      = f.input :details, label: false, placeholder: 'Why you are trying to send this request?(Markdown supported)', required: true, validate: { presence: true }, hint: ("can't be blank or less than 20 characters.")
       = f.input :type, label: "Online"
-      = f.input :hangout_url, placeholder: 'google hangout url, skayp id', label: false
+      = f.input :hangout_url, placeholder: 'ex. google hangout url, skayp id', label: false, hint: ("can't be blank if you want to pair online.")
     .modal-footer
       .form-actions
         %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
