--- a/app/views/search/_profile_search.html.haml
+++ b/app/views/search/_profile_search.html.haml
@@ -2,7 +2,7 @@
   = link_to image_tag(profile.avatar.url(:small), class: "item-img", title: "#{profile.name}"), show_profile_path(profile.username)
   .pait-btn
     - if user_signed_in?
-      = link_to new_pair_path(navigator_id: profile.id), :class => "btn btn-itunes", :type => "button", "data-target" => "#pairModal", "data-toggle" => "modal", "data-navigator-name" => "#{profile.name}", "data-navigator_id" => "#{profile.id}", :remote => true do
+      = link_to new_pair_path(navigator_id: profile.id), :class => "btn btn-itunes", :type => "button", "data-target" => "#pairModal", "data-toggle" => "modal", "data-navigator-name" => "#{profile.first_name}", "data-navigator_id" => "#{profile.id}", :remote => true do
         %span.ion-code-working
         PAIR
 
