--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,5 +12,7 @@
     %header
       = render 'layouts/navigation'
     %main{:role => "main"}
-      = #render 'layouts/messages'
+      = render 'layouts/messages' unless current_page?(root_path)
       = yield
+      = render 'layouts/footer' unless current_page?(root_path)
+
