--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,10 +24,24 @@
 @import "brand-buttons-inversed";
 @import 'bootstrap-datetimepicker';
 
+
+.footer {
+  height: 50px; /* .push must be the same height as .footer */
+}
+.push{
+  height: 98px;
+}
+
 body {
   background:#ECF0F1; // #EDF0F5; //rgb(235, 238, 243);
   width:100%;
   height:100%;
+}
+footer {
+  height: 60px;
+}
+footer {
+  background-color: #eee;
 }
 
 ul.ui-autocomplete {
