--- a/app/views/layouts/_navigation_search.html.haml
+++ b/app/views/layouts/_navigation_search.html.haml
@@ -1,8 +1,8 @@
 #search-controls
   = form_tag(search_path, method: 'get', class: 'form-inline') do
     .form-group
-      = text_field_tag :skill_search,"" , class: "form-control", placeholder: 'ruby, go, python'
-      = text_field_tag :location_address,"" , class: "form-control"
+      = text_field_tag :skill_search, params[:skill_search] , class: "form-control", placeholder: 'ruby, go, python'
+      = text_field_tag :location_address,params[:location_address] , class: "form-control"
       %button.search-btn.btn.btn-gray{:type => "submit"}
         %i.ion-search
         SEARCH
@@ -16,10 +16,43 @@
     }
   });
 
-  jQuery(function() {
-    return $("#skill_search").autocomplete({
-      source: "/autocompletes/skill",
-      delay: 300,
-      minLength: 2
-    });
+
+  $('#skill_search').selectize({
+      valueField: 'name',
+      labelField: 'name',
+      searchField: 'name',
+      options: [],
+      create: false,
+      render: {
+          option: function(item, escape) {
+              console.log(item);
+              var actors = [];
+              for (var i = 0, n = item.autocompletes.length; i < n; i++) {
+                  actors.push('<span>' + escape(item.autocompletes[i].name) + '</span>');
+              }
+
+              return '<div>' +
+                      '<span class="name">' +
+                          '<span class="name">' + escape(item.name) + '</span>' +
+                      '</span>' +
+                    '</div>';
+          }
+      },
+      load: function(query, callback) {
+          if (!query.length) return callback();
+          $.ajax({
+              url: '/autocompletes/skill.json',
+              type: 'GET',
+              dataType: 'json',
+              data: {
+                  q: query,
+              },
+              error: function() {
+                  callback();
+              },
+              success: function(res) {
+                  callback(res.autocompletes);
+              }
+          });
+      }
   });
