--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,11 +10,11 @@
     
   %body
     %header
-      = render 'layouts/navigation'
+      = render 'layouts/navigation' unless current_page?(signup_path)
     %main{:role => "main"}
       = render 'layouts/messages' unless current_page?(root_path)
       = yield
       - unless current_page?(root_path)
         .push
-    = render 'layouts/footer' unless current_page?(root_path)
+    / = render 'layouts/footer' unless current_page?(root_path) || current_page?(signup_path)
 
