--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,3 +1,14 @@
 .authform
-  %h3 Sign Up
+  %h1 BECOME A BETTER PROGRAMMER WITH GEEKHUB
   = render 'new_form'
+
+:scss
+  main, body, html{
+    margin: 0;
+    padding: 0;
+    position:fixed;
+    top:0px;
+    bottom:0px;
+    left:0px;
+    right:0px;
+  }
